install lato via google font, export svg icons., create BaseAlert component with stories, add svg icons, change borderRadius unit from px to rem

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -1,3 +1,4 @@
 @tailwind base;
 @tailwind components;
+@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
 @tailwind utilities;
