--- a/src/assets/tooltipstyles.css
+++ b/src/assets/tooltipstyles.css
@@ -1,17 +1,33 @@
+/* default styles for triangle pointer */
 [data-tooltip]::after {
-  position: absolute;
-  @apply h-auto w-auto mx-auto left-0 right-0;
+  @apply absolute h-auto w-auto mx-auto;
   content: url("data:image/svg+xml,%3Csvg width='12' height='6' viewBox='0 0 12 6' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M6 -5.24537e-07L0 6L12 6L6 -5.24537e-07Z' fill='%23283341'/%3E%3C/svg%3E");
 }
+/* top position styles for the triangle pointer */
 [data-tooltip-modified-top][aria-description]::after {
-  top: 0; transform: rotate(-180deg); margin-top: -0.5rem;
+  @apply top-0 left-0 right-0 -mt-2;
+  transform: rotate(-180deg);
 }
+/* bottom position styles for the triangle pointer */
 [data-tooltip-modified-bottom][aria-description]::after {
-  bottom: 0; margin-bottom: -0.5rem;
+  @apply bottom-0 left-0 right-0 -mb-2;
 }
-[data-tooltip-modified-top][aria-description]::before { bottom: 100%; }
-[data-tooltip-modified-bottom][aria-description]::before { top: 100%; }
-
+/* right position styles for the triangle pointer */
+[data-tooltip-modified-right][aria-description]::after {
+  @apply w-auto h-auto right-0 bottom-0 top-1/4 m-auto;
+  content: url("data:image/svg+xml,%3Csvg width='6' height='12' viewBox='0 0 6 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7.15493e-08 6L6 12L6 0L7.15493e-08 6Z' fill='%23283341'/%3E%3C/svg%3E%0A");
+}
+/* left position style for the triangle pointer */
+[data-tooltip-modified-left][aria-description]::after {
+  @apply w-auto h-auto left-0 bottom-0 top-0 m-auto top-1/4 m-auto;
+  content: url("data:image/svg+xml,%3Csvg width='6' height='12' viewBox='0 0 6 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M6 6L1.43099e-07 0L0 12L6 6Z' fill='%23283341'/%3E%3C/svg%3E%0A");
+}
+/* position styles for tooltip's base */
+[data-tooltip-modified-top][aria-description]::before { @apply bottom-1/1 left-0 right-0; }
+[data-tooltip-modified-bottom][aria-description]::before { @apply top-1/1; }
+[data-tooltip-modified-right][aria-description]::before { @apply left-1/1 right-0 top-1/5; }
+[data-tooltip-modified-left][aria-description]::before { @apply top-1/5 right-1/1; }
+/* default styles for tooltip's base */
 [data-tooltip]::before {
-  @apply absolute font-lato font-bold p-1 bg-gray-600 text-white rounded;
+  @apply absolute text-sm font-lato font-bold p-2 bg-gray-600 text-white rounded m-auto;
 }
