rounded-sm now has a 2px border

--- a/src/assets/tooltips.scss
+++ b/src/assets/tooltips.scss
@@ -70,7 +70,7 @@
 
   &.popover {
     .popover-inner {
-      @apply bg-white text-gray-600 p-4 rounded-sm;
+      @apply bg-white text-gray-600 p-4 rounded;
     }
 
     .popover-arrow {
