--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -1,7 +1,5 @@
 @tailwind base;
 
-@tailwind components;
-
 @import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
 
 * {
@@ -10,5 +8,26 @@
   font-smooth: always;
   -moz-osx-font-smoothing: grayscale;
 }
+
+h1 {
+  @apply text-2xl;
+}
+h2 {
+  @apply text-xl;
+}
+h3 {
+  @apply text-lg;
+}
+h4 {
+  @apply text-sm;
+}
+h5 {
+  @apply text-xs;
+}
+h6 {
+  @apply text-xxs;
+}
+
+@tailwind components;
 
 @tailwind utilities;
