--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -1,6 +1,7 @@
 @tailwind base;
 
 @import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap');
 
 * {
   font-family: lato, sans-serif;
