Change font definitions to apply to body, not every element

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap');
 
-* {
+body {
   font-family: lato, sans-serif;
   -webkit-font-smoothing: subpixel-antialiased;
   font-smooth: always;
