Update mono font to "Source Code Pro"

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -1,7 +1,7 @@
 @tailwind base;
 
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 body {
   font-family: lato, sans-serif;
