--- a/src/assets/mixins.scss
+++ b/src/assets/mixins.scss
@@ -3,7 +3,7 @@
   3:4 -> aspect-ratio(3, 4),
   16:9 -> aspect-ratio(16, 9)
 */
-@mixin aspect-ratio($width, $height) {
+@mixin aspect-ratio($width, $height, $affectChildren: true) {
   @apply relative;
 
   &::before {
@@ -13,9 +13,11 @@
     padding-top: ($width / $height) * 100%;
   }
 
-  > img,
-  div {
-    @apply absolute w-full h-full inset-0 object-cover;
+  @if $affectChildren {
+    > img,
+    div {
+      @apply absolute w-full h-full inset-0 object-cover;
+    }
   }
 }
 
